--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -1,7 +1,7 @@
 # cluster specific values
 cluster:
   # specify cluster name
-  name: template-rke2
+  name: ec2-rke2
 
   # specify cluster labels
   labels: {}
@@ -10,12 +10,12 @@ cluster:
   annotations: {}
 
 # specify cloud credential secret name, do not need to be provided if using custom driver
-cloudCredentialSecretName: ""
+cloudCredentialSecretName: "alex-suse-us-west-2"
 
 # specify cloud provider, options are amazonec2, digitalocean, azure, vsphere or custom
-cloudprovider: "digitalocean"
+cloudprovider: "amazonec2"
 
-kubernetesVersion: ""
+kubernetesVersion: "v1.24.11+rke2r1"
 
 # general RKE options
 rke:
